feat: v3.0.150-b11 universal java interop, pure Java2D OSR, and web automation suite
* feat(download): implement pause, resume, cancel workflows and interactive UI controls

* feat(interop): add enterprise pure Java dual ergonomics and rename demo to kromium-sample-compose

* feat(sample-swing): add 100% pure Java Swing desktop browser showcase application

* chore(sample-swing): rely on kromium-core JvmModuleOpener for dynamic OS module opening

* feat(branding): ensure seamless cross-platform app logo, taskbar icons, and naming across both sample apps

* feat(ui): unify both sample apps to exact same minimalist monochrome design with crisp vector icons

* fix(swing): resolve download pause, resume, and cancel actions and selection loss

* docs: add ROADMAP.md outlining strategic milestones and future capabilities

* feat(engine): support custom pre-bundled install dir via -Dkromium.install.dir JVM property

* feat(config): add autoDownload toggle to disable automatic engine downloads for enterprise environments

* refactor(code-quality): eliminate wildcard star imports and organize explicit imports across all modules

* style: normalize whitespace and remove redundant blank lines after package and import headers

* refactor(architecture): enforce one file per top-level class/interface/object across all modules

* refactor(dry): eliminate duplicated navigation, byte formatting, and state resolution logic

* fix(ci): preserve semver major.minor prefix and fix cache tag sed replacement in update-jcef pipeline

* fix(ci): prevent duplicate release execution and git bot takeover on tag push event

* feat(scheme): implement custom scheme and virtual asset interception (Milestone 1)

- Added KromiumCustomScheme for fine-grained Chromium security flags
- Added KromiumSchemeHandler with turnkey classpath & directory asset streaming
- Added secure Single Page Application (SPA) routing fallback with MIME-confusion protection
- Added zero-dependency MimeTypes resolver for 50+